--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,1 +1,11 @@
-Flask==2.3.2 celery==5.2.7 redis==4.5.5 psycopg2-binary==2.9.6 qdrant-client==1.6.0 python-dotenv==1.0.0
+Flask==2.3.2
+celery==5.2.7
+redis==4.5.5
+psycopg2-binary==2.9.6
+qdrant-client==1.6.0
+python-dotenv==1.0.0
+gunicorn==20.1.0
+requests==2.31.0
+SQLAlchemy==1.4.49
+werkzeug==2.3.4
+
