--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.3.2
 celery==5.2.7
 redis==4.5.5
-psycopg2-binary==2.9.6
+psycopg2-binary>=2.9.9
 qdrant-client==1.15.1
 python-dotenv==1.0.0
 gunicorn==20.1.0
