--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -5,7 +5,7 @@ psycopg2-binary>=2.9.9
 qdrant-client==1.15.1
 python-dotenv==1.0.0
 gunicorn==20.1.0
-requests==2.31.0
+requests>=2.31.0
 SQLAlchemy==1.4.49
 werkzeug==2.3.4
 psycogreen==1.0.2
