--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.3.2
 celery==5.2.7
 redis==4.5.5
-psycopg2-binary==2.9.11
+psycopg2-binary>=2.9.9
 qdrant-client==1.15.1
 python-dotenv==1.0.0
 gunicorn==20.1.0
@@ -9,4 +9,4 @@ requests==2.32.5
 SQLAlchemy==1.4.49
 werkzeug==2.3.4
 psycogreen==1.0.2
-gevent==24.2.1
+gevent==23.9.1
